# Aether

./: .gitignore  AETHER_FRAMEWORK_RESEARCH.md  LICENSE  README.md  conformance.md
aether-ref/: Cargo.toml  README.md  openapi.yaml
aether-ref/deploy/: Dockerfile  adapter-config.yaml  docker-compose.yml  sample-policy.yaml
aether-ref/docs/: failure-modes.md
aether-ref/examples/policies/: critical-infrastructure.yaml  disaster-response.yaml  multi-provider.yaml
aether-ref/formal/: AetherSpec.cfg  AetherSpec.tla  README.md
aether-ref/src/: config.rs  error.rs  lib.rs
aether-ref/src/adapter/: mock.rs  mod.rs  netlink.rs  registry.rs  traits.rs
aether-ref/src/api/: http.rs  http_types.rs  mod.rs  northbound.rs  southbound.rs
aether-ref/src/audit/: export.rs  logger.rs  mod.rs
aether-ref/src/engine/: conflict.rs  evaluator.rs  mod.rs  tiebreak.rs
aether-ref/src/hcm/: activation.rs  clock.rs  mod.rs
aether-ref/src/state/: snapshot.rs
aether-ref/src/telemetry/: ingestion.rs  memory.rs  mod.rs
aether-ref/src/types/: audit.rs  decision.rs  hcm.rs  link.rs  mod.rs  policy.rs  traffic_class.rs
docs/: 00-non-goals.md  01-architecture.md  02-policy-schema.md  03-integration-guide.md  04-human-continuity-mode.md  glossary.md
schema/: decision-log-v1.json  hcm-activation-v1.json  telemetry-v1.json
