[package]
name = "aether-ref"
version = "1.0.0"
edition = "2021"
description = "Reference implementation of the Aether policy-driven uplink arbitration framework"
license = "Apache-2.0"

[[bin]]
name = "aether"
path = "src/bin/aether.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
async-trait = "0.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
pretty_assertions = "1"
